Project adjustments Hero complete

--- a/index.html
+++ b/index.html
@@ -45,410 +45,36 @@
     </header>
 
     <main class="main">
-      <!-- TODO: Hero starts-->
+      <!-- TODO: Hero section starts -->
       <section class="section hero-section relative">
-        <div class="flex column hero-container">
-          <!-- <article class="flex column hero__content">
-            <h1 class="regular__h">por que existimos?</h1>
-            <p class="regular__p">
-              Nossa essência é inspirada na Cidade de Goiás, terra de Cora
-              Coralina, famosa por seus doces e repletos de frutas. A Frutos de
-              Goiás existe para trazer para seus consumidores os sabores que
-              relembrem a infância.
-            </p>
-            <button class="button">get started</button>
-          </article> -->
-          <div class="video-section-container flex">
-            <article class="flex column video__content">
-              <h1 class="regular__h">por que existimos?</h1>
-              <p class="regular__p">
-                Nossa essência é inspirada na Cidade de Goiás, terra de Cora
-                Coralina, famosa por seus doces e repletos de frutas. A Frutos
-                de Goiás existe para trazer para seus consumidores os sabores
-                que relembrem a infância.
-              </p>
-              <button type="button" class="button">get started</button>
-            </article>
-            <div class="video__container">
-              <picture>
-                <img
-                  src="assets/logo.webp"
-                  alt=""
-                  class="regular__image video__capa"
-                />
-              </picture>
-              <i class="fa-solid fa-play video__play"></i>
-            </div>
-            <div class="video__container__itself">
+        <div class="flex column five__gap items__center">
+          <div class="relative pointer video__thumb__container">
+            <picture>
+              <img src="assets/logo.webp" alt="" class="video__thumb" />
+            </picture>
+            <i class="fa-solid fa-play absolute play__video dark__yellow"></i>
+          </div>
+
+          <div
+            class="video__container all absolute flex items__center content__center"
+          >
+            <div class="video__content">
               <video
                 src="assets/videos/video.mp4"
-                controls
                 class="video"
+                controls
               ></video>
-              <i class="fas fa-times absolute close__video"></i>
             </div>
+            <i
+              class="fas fa-times white absolute font__five close__video pointer"
+            ></i>
           </div>
 
-          <div class="hero__products__container">
-            <picture class="hero__product__container">
-              <img src="assets/product1.webp" alt="" class="hero__product" />
-            </picture>
-
-            <picture class="hero__product__container">
-              <img
-                src="assets/product2.webp"
-                alt=""
-                class="hero__product product__up"
-              />
-            </picture>
-
-            <picture class="hero__product__container">
-              <img src="assets/product3.webp" alt="" class="hero__product" />
-            </picture>
-
-            <picture class="hero__product__container">
-              <img
-                src="assets/product4.webp"
-                alt=""
-                class="hero__product product__up"
-              />
-            </picture>
-          </div>
+          <button type="button" class="button">Conheça nossa loja</button>
         </div>
       </section>
-
-      <!-- FIXME: Natural starts -->
-      <section class="section natural-section">
-        <div class="flex natural-container">
-          <picture>
-            <img
-              src="assets/product1.webp"
-              alt=""
-              class="regular__image natural__image"
-            />
-          </picture>
-
-          <article class="flex column natural__content">
-            <h2 class="regular__h">E é natural mesmo?</h2>
-
-            <p class="regular__p">
-              São frutas de todo o Brasil. Tudo é feito da forma mais caseira e
-              artesanal possível. As receitas são únicas com cerca de 90 % de
-              fruta. É fruta mesmo, mais cremosa e refrescante do que você
-              imagina. Agora adicione Leite fresco, direto da fazenda, natural e
-              integral.
-            </p>
-
-            <ul class="flex column natural__list">
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Feito de forma caseira e artesanal</mark>
-              </li>
-
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Receitas únicas</mark>
-              </li>
-
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Cerca de 90% de fruta</mark>
-              </li>
-
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Frutas frescas e selecionadas</mark>
-              </li>
-
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Ingredientes naturais de primeira linha</mark>
-              </li>
-
-              <li class="natural__list__item">
-                <i class="fa-solid fa-circle-check"></i>
-                <mark> Frutas colhidas diretamente do pé</mark>
-              </li>
-            </ul>
-
-            <button type="button" class="button">get started</button>
-          </article>
-        </div>
-      </section>
-
-      <!-- TODO: Garantee starts -->
-      <section class="section garantee-section">
-        <div class="garantee-container">
-          <article class="flex column two__gap items__center">
-            <h2 class="regular__h text__center">e como garantimos isso?</h2>
-            <p class="regular__p text__center white">
-              Utilizando apenas frutas frescas, selecionadas, e ingredientes
-              naturais de primeira linha. Colhemos as diversas frutas no pé,
-              para levar até você os sabores únicos da natureza, de um jeito
-              ainda mais saboroso e refrescante.
-            </p>
-
-            <h3 class="regular__h text__center margin__top__three">
-              fruta do pé, direto pro seu picolé!
-            </h3>
-            <p class="regular__p text__center white">
-              A essência da Frutos de Goiás sempre foram as frutas. Os produtos
-              continuam sendo fabricados em um processo natural e assim,
-              seguimos crescendo artesanalmente.
-            </p>
-          </article>
-
-          <div class="flex garantee__images__container">
-            <img src="assets/loja1.webp" alt="" class="loja2" />
-
-            <img src="assets/loja2.webp" alt="" class="loja1" />
-
-            <img src="assets/loja3.webp" alt="" class="loja3" />
-
-            <img src="assets/loja4.webp" alt="" class="kids" />
-          </div>
-        </div>
-      </section>
-
-      <!-- TODO: Video section starts -->
-      <!-- <section class="section">
-        <div class="video-section-container flex">
-          <article class="flex column video__content">
-            <h2 class="regular__h">fruta do pé, direto pro seu picolé!</h2>
-            <p class="regular__p">
-              A essência da Frutos de Goiás sempre foram as frutas. Os produtos
-              continuam sendo fabricados em um processo natural e assim,
-              seguimos crescendo artesanalmente
-            </p>
-            <button type="button" class="button">get started</button>
-          </article>
-          <div class="video__container">
-            <picture>
-              <img
-                src="assets/capa.webp"
-                alt=""
-                class="regular__image video__capa"
-              />
-            </picture>
-            <i class="fa-solid fa-play video__play"></i>
-          </div>
-          <div class="video__container__itself">
-            <video src="assets/videos/video.mp4" controls class="video"></video>
-            <i class="fas fa-times absolute close__video"></i>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- FIXME: Products start -->
-      <section class="section">
-        <div class="products-section-container">
-          <section>
-            <div class="flex column product__section__intro__container">
-              <h2 class="regular__h">nossos produtos</h2>
-              <p class="regular__p">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
-                aliquam.
-              </p>
-              <div class="flex products__intro__container">
-                <picture class="product__intro__img__container">
-                  <img
-                    src="assets/capa.webp"
-                    alt=""
-                    class="regular__image products__intro__img"
-                  />
-                </picture>
-
-                <picture class="product__intro__img__container">
-                  <img
-                    src="assets/amount.webp"
-                    alt=""
-                    class="regular__image products__intro__img"
-                  />
-                </picture>
-
-                <picture class="product__intro__img__container">
-                  <img
-                    src="assets/capa.webp"
-                    alt=""
-                    class="regular__image products__intro__img"
-                  />
-                </picture>
-              </div>
-            </div>
-          </section>
-
-          <section>
-            <div class="menu flex column">
-              <h2 class="regular__h">nosso menu</h2>
-
-              <div class="menu__content flex">
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="menu__product__container">
-                  <picture>
-                    <img src="assets/product1.webp" alt="" />
-                  </picture>
-                  <div class="product__info flex">
-                    <h3>nome do produto</h3>
-                    <div class="flex items__center small__gap">
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                      <i class="fa-solid fa-star"></i>
-                    </div>
-                    <mark class="price">r$ <strong>19,99</strong></mark>
-                    <div class="product__buttons__container flex">
-                      <a href="#" class="button"> Peça pelo Ifood </a>
-                      <a href="#" class="button"> Peça pelo nosso delivery </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </div>
-      </section>
+      <!-- FIXME: Hero section ends -->
     </main>
-
-    <footer class="footer">
-      <div class="footer__content">
-        <picture>
-          <img src="assets/logo.webp" alt="" class="footer__logo" />
-        </picture>
-
-        <article class="flex column footer__content">
-          <div class="flex items__center small__gap">
-            <h2>Nosso endereço:</h2>
-            <strong
-              >Avenida Barão do Rio Branco, 748, centro - Palhoça - SC.</strong
-            >
-          </div>
-          <div class="flex items__center small__gap">
-            <h3>Ligue para nós:</h3>
-            <strong>(48) 2132-2525</strong>
-          </div>
-          <div class="flex items__center small__gap">
-            <h4>Siga-nos:</h4>
-            <div class="no__overflow flex small__gap">
-              <a href="#">
-                <i class="fa-brands fa-instagram footer__social instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fa-brands fa-facebook footer__social face"></i>
-              </a>
-            </div>
-          </div>
-        </article>
-
-        <div class="copy__container">
-          <p>&copy;copyright. Todos os direitos reservados.</p>
-        </div>
-      </div>
-    </footer>
 
     <script src="js/index.js"></script>
   </body>
