--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
 
           <div
-            class="video__container all absolute flex items__center content__center"
+            class="video__container all fixed flex items__center content__center"
           >
             <div class="video__content">
               <video
