--- a/index.html
+++ b/index.html
@@ -153,10 +153,12 @@
                 </p>
                 <p class="regular__p white">Esperamos por você.</p>
                 <p class="regular__p white">
-                  "Recria tua vida, sempre, sempre. <br />
-                  Remove pedras e planta <br />
-                  roseiras e faz doces. <br />
-                  Recomeça." <br />
+                  <strong>
+                    "Recria tua vida, sempre, <br />
+                    sempre. Remove pedras e <br />
+                    planta roseiras e faz doces. <br />
+                    Recomeça." <br />
+                  </strong>
                   — Cora Coralina.
                 </p>
               </article>
