--- a/index.html
+++ b/index.html
@@ -90,24 +90,19 @@
                 <h2 class="regular__h">Por que existimos?</h2>
                 <p class="regular__p green">
                   Nossa essência é inspirada na Cidade de Goiás, terra de Cora
-                  Coralina, famosa por seus doces e por seus grandes cerrados,
-                  repletos de frutas, em toda região. A Frutos de Goiás nasceu
-                  com um objetivo: fazer parte da vida de seus consumidores com
-                  sabores que relembrem os momentos marcantes da infância e da
-                  vida de cada um, trazendo nostalgia e alegria em cada
-                  pedacinho.
+                  Coralina, famosa por seus doces e repletos de frutas. A Frutos
+                  de Goiás existe para trazer para seus consumidores os sabores
+                  que relembrem a infância.
                 </p>
               </article>
 
               <article class="flex column three__gap">
                 <h2 class="regular__h">E como garantimos isso?</h2>
                 <p class="regular__p green">
-                  O primeiro passo é trabalhar a qualidade, utilizando apenas
-                  frutas frescas, selecionadas, e ingredientes naturais de
-                  primeira linha em nossas criações. O que a Frutos de Goiás
-                  gosta mesmo é de colher as diversas frutas no pé, selecionar
-                  cada uma e levar até você os sabores únicos da natureza, de um
-                  jeito ainda mais saboroso e refrescante, aonde você estiver.
+                  Utilizando apenas frutas frescas, selecionadas, e ingredientes
+                  naturais de primeira linha. Colhemos as diversas frutas no pé,
+                  para levar até você os sabores únicos da natureza, de um jeito
+                  ainda mais saboroso e refrescante.
                 </p>
               </article>
             </article>
@@ -116,52 +111,25 @@
               <article class="flex column three__gap">
                 <h2 class="regular__h">E é natural mesmo?</h2>
                 <p class="regular__p green">
-                  Sejam os sabores do centro ou do norte do país, tudo é feito
-                  da forma mais caseira e artesanal possível. Nossas receitas
-                  são únicas, e compostas por cerca de 90&NonBreakingSpace;% de
-                  fruta. É fruta mesmo, mais cremosa e refrescante do que você
-                  imagina. Sabe o que mais faz parte da lista de ingredientes?
-                  Leite fresco, direto da fazenda, natural e integral. Também
-                  criamos por aqui as geleias e doces de frutas frescas que
-                  incorporaram os sorvetes e os recheios dos picolés.
+                  São frutas de todo o Brasil. Tudo é feito da forma mais
+                  caseira e artesanal possível. As receitas são únicas com cerca
+                  de 90 % de fruta. É fruta mesmo, mais cremosa e refrescante do
+                  que você imagina. Agora adicione Leite fresco, direto da
+                  fazenda, natural e integral.
                 </p>
               </article>
 
               <article class="flex column three__gap">
                 <h2 class="regular__h">Fruta do pé direto pro seu picolé!</h2>
                 <p class="regular__p green">
-                  A essência da Frutos de Goiás sempre foram as frutas. E mesmo
-                  com a expansão, os produtos continuam sendo fabricados no
-                  mesmo processo natural e assim, seguimos crescendo
-                  artesanalmente.
+                  A essência da Frutos de Goiás sempre foram as frutas. Os
+                  produtos continuam sendo fabricados em um processo natural e
+                  assim, seguimos crescendo artesanalmente.
                 </p>
               </article>
             </article>
 
             <div class="car__content__container">
-              <article class="green__container flex column two__gap">
-                <p class="regular__p white">
-                  Mesmo te contando <br />
-                  tudo isso, sabemos <br />
-                  que textos não têm sabor.
-                </p>
-                <p class="regular__p white">
-                  Por isso, vale a pena vir <br />
-                  até uma de nossas sorveterias <br />
-                  e açaiterias para experimentar <br />
-                  o que estamos falando.
-                </p>
-                <p class="regular__p white">Esperamos por você.</p>
-                <p class="regular__p white">
-                  <strong>
-                    "Recria tua vida, sempre, <br />
-                    sempre. Remove pedras e <br />
-                    planta roseiras e faz doces. <br />
-                    Recomeça." <br />
-                  </strong>
-                  — Cora Coralina.
-                </p>
-              </article>
               <picture>
                 <img
                   src="assets/caminhao-frutos.webp"
