--- a/index.html
+++ b/index.html
@@ -133,6 +133,166 @@
       </section>
 
       <!-- FIXME: About ends -->
+
+      <!-- TODO: Products start -->
+
+      <section class="section">
+        <div class="product__section__container">
+          <div class="product__section__content">
+            <h2 class="regular__h uppercase text__center">nosso cardápio</h2>
+
+            <div
+              class="margin__top__ten flex column products__container five__gap"
+            >
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product1.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product2.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product3.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product4.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product5.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product6.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Nome do produto</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FIXME: Products end  -->
     </main>
 
     <script src="js/index.js"></script>
