--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         id="sobre"
         class="section global__padding about-section relative"
       >
-        <div class="about__container">
+        <div class="about__container flex column">
           <div class="flex column ten__gap about__content">
             <article class="flex column three__gap">
               <article class="flex column three__gap">
@@ -129,6 +129,10 @@
               </article>
             </article>
           </div>
+
+          <a href="#" class="button uppercase margin__top__five"
+            >faça seu pedido</a
+          >
         </div>
       </section>
 
@@ -138,7 +142,7 @@
 
       <section class="section">
         <div class="product__section__container">
-          <div class="product__section__content">
+          <div class="product__section__content flex column">
             <h2 class="regular__h uppercase text__center">nosso cardápio</h2>
 
             <div
@@ -288,6 +292,10 @@
                 <h3 class="font__three font__two green">Nome do produto</h3>
               </div>
             </div>
+
+            <a href="#" class="button uppercase margin__top__five"
+              >faça seu pedido</a
+            >
           </div>
         </div>
       </section>
